--- a/client/src/app/features/admin/components/resources/action-list/action-list.component.scss
+++ b/client/src/app/features/admin/components/resources/action-list/action-list.component.scss
@@ -22,6 +22,7 @@
 mat-card-header {
   display: flex;
   align-items: center;
+  padding-bottom: vars.$spacing-sm;
 
   .spacer {
     flex: 1;
