--- a/client/src/app/features/admin/components/roles/role-list/role-list.component.scss
+++ b/client/src/app/features/admin/components/roles/role-list/role-list.component.scss
@@ -11,6 +11,7 @@
 mat-card-header {
   display: flex;
   align-items: center;
+  padding-bottom: vars.$spacing-sm;
 
   .spacer {
     flex: 1;
